# wallet-attached-storage-server-python

./: .dockerignore  .flake8  .gitignore  .safety-project.ini  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/backends/: dropbox.md  filesystem.md  gdrive.md  memory.md  onedrive.md  postgresql.md  s3.md
src/was_server/: __init__.py  _app.py  _http_signature.py  _settings.py  _storage.py  _storage_dropbox.py  _storage_factory.py  _storage_filesystem.py  _storage_gdrive.py  _storage_onedrive.py  _storage_postgresql.py  _storage_s3.py  _urn_uuid.py
tests/: conftest.py  test_app.py  test_http_signature.py  test_storage.py  test_storage_dropbox.py  test_storage_factory.py  test_storage_gdrive.py  test_storage_onedrive.py  test_storage_postgresql.py  test_storage_s3.py  test_urn_uuid.py
